[gd_scene load_steps=25 format=2]

[ext_resource path="res://bat.gd" type="Script" id=1]
[ext_resource path="res://Action RPG Resources/Enemies/Bat.png" type="Texture" id=2]
[ext_resource path="res://Action RPG Resources/Shadows/SmallShadow.png" type="Texture" id=3]
[ext_resource path="res://stats.tscn" type="PackedScene" id=4]
[ext_resource path="res://playerdetection.tscn" type="PackedScene" id=5]
[ext_resource path="res://hurtbox.tscn" type="PackedScene" id=6]
[ext_resource path="res://whiteshader.shader" type="Shader" id=7]
[ext_resource path="res://softcollision.tscn" type="PackedScene" id=8]
[ext_resource path="res://wandercontrol.tscn" type="PackedScene" id=9]
[ext_resource path="res://hitbox.tscn" type="PackedScene" id=10]

[sub_resource type="ShaderMaterial" id=1]
resource_local_to_scene = true
shader = ExtResource( 7 )
shader_param/active = false

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 16, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 32, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 48, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 64, 0, 16, 24 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "default",
"speed": 11.0
} ]

[sub_resource type="CircleShape2D" id=8]
radius = 4.10695

[sub_resource type="CapsuleShape2D" id=9]
radius = 7.43242
height = 3.84472

[sub_resource type="CircleShape2D" id=10]
radius = 76.8716

[sub_resource type="CircleShape2D" id=11]
radius = 4.35195

[sub_resource type="CircleShape2D" id=12]
radius = 3.46646

[sub_resource type="Animation" id=13]
resource_name = "start"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Bat:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=14]
resource_name = "stop"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Bat:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[node name="enemie" type="KinematicBody2D"]
collision_layer = 32
script = ExtResource( 1 )

[node name="Bat" type="AnimatedSprite" parent="."]
material = SubResource( 1 )
frames = SubResource( 7 )
frame = 4
playing = true
offset = Vector2( 0, -7 )

[node name="shadow" type="Sprite" parent="."]
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 8 )

[node name="hurtbox" parent="." instance=ExtResource( 6 )]
collision_layer = 8

[node name="CollisionShape2D" parent="hurtbox" index="0"]
position = Vector2( 0.132435, -8.94054 )
shape = SubResource( 9 )

[node name="stats" parent="." instance=ExtResource( 4 )]
max_health = 2

[node name="playerdetection" parent="." instance=ExtResource( 5 )]

[node name="CollisionShape2D" parent="playerdetection" index="0"]
modulate = Color( 1, 0.494118, 0, 0.305882 )
self_modulate = Color( 1, 0.47451, 0.0117647, 1 )
shape = SubResource( 10 )

[node name="hitbox" parent="." instance=ExtResource( 10 )]
collision_mask = 4

[node name="CollisionShape2D" parent="hitbox" index="0"]
position = Vector2( 0, -9.75139 )
shape = SubResource( 11 )

[node name="softcollision" parent="." instance=ExtResource( 8 )]

[node name="CollisionShape2D" parent="softcollision" index="0"]
shape = SubResource( 12 )

[node name="wandercontrol" parent="." instance=ExtResource( 9 )]

[node name="blinkanimation" type="AnimationPlayer" parent="."]
anims/start = SubResource( 13 )
anims/stop = SubResource( 14 )

[connection signal="area_entered" from="hurtbox" to="." method="_on_hurtbox_area_entered"]
[connection signal="invincible_start" from="hurtbox" to="." method="_on_hurtbox_invincible_start"]
[connection signal="invincible_stop" from="hurtbox" to="." method="_on_hurtbox_invincible_stop"]
[connection signal="no_health" from="stats" to="." method="_on_stats_no_health"]
[connection signal="area_entered" from="hitbox" to="." method="_on_hitbox_area_entered"]

[editable path="hurtbox"]
[editable path="playerdetection"]
[editable path="hitbox"]
[editable path="softcollision"]
